Befehle für 1/3 und 2/3

--- a/gesamt.tex
+++ b/gesamt.tex
@@ -66,6 +66,12 @@
 \renewcommand\raggedpart{\centering}
 \makeatother
 
+
+% Für "schöne" Brüche, z.B. bei 2/3-Mehrheit
+\usepackage{xfrac}
+\newcommand{\eindrittel}{\sfrac{1}{3}}
+\newcommand{\zweidrittel}{\sfrac{2}{3}}
+
 % Aus irgendeinem Grund werden chapters nicht als Absatz in einem Paragraphen
 % fehlinterpretiert sections aber schon und dementsprechend wird vor ihnen eine
 % Absatznummer eingefügt => definiere eigenen Befehl (macht es auch einfacher
