Keine Umlaute in labels

--- a/wahl-abstimmungsordnung/document.core.tex
+++ b/wahl-abstimmungsordnung/document.core.tex
@@ -96,7 +96,7 @@ Die Bekanntmachung enthält:
 
 Die Bekanntmachung ist nicht vor Ende der Urabstimmung zu entfernen.
 
-\jurparagraph{Wählerinnenverzeichnis}\label{wahl:wählerinnenverzeichnis}
+\jurparagraph{Wählerinnenverzeichnis}\label{wahl:waehlerinnenverzeichnis}
 
 Alle Wahlberechtigten gemäß §~3 Absatz~2 Organisationssatzung sind in ein Wählerinnenverzeichnis in Listenform einzutragen. Die Aufstellung des Wählerinnenverzeichnisses obliegt dem  Wahlausschuss. Es kann im Wahlverfahren auch in elektronischer Form  verwendet werden.
 
@@ -111,7 +111,7 @@ Das Wählerinnenverzeichnis enthält die folgenden Angaben:
 \item Bemerkungen.
 \end{enumerate}
 
-Das Wählerinnenverzeichnis ist sieben Tage nach Bekanntmachung der Wahl bzw. Urabstimmung vorläufig  abzuschließen und für fünf Tage beim Wahlausschuss zur Einsicht durch die Studierenden aufzulegen. Eine Einsichtnahme steht jedem zu, um seine  eigenen Daten auf Richtigkeit und Vollständigkeit zu überprüfen. Zur Überprüfung der Richtigkeit oder Vollständigkeit der Daten von anderen im Wählerinnenverzeichnis eingetragenen Personen haben Wahlberechtigte nur dann ein Recht auf Einsicht in das Wählerinnenverzeichnis, wenn sie Tatsachen glaubhaft machen, aus denen sich eine Unrichtigkeit oder Unvollständigkeit des Wählerinnenverzeichnisses ergeben kann.  \label{wahl:wählerinnenverzeichnis:auflegung}
+Das Wählerinnenverzeichnis ist sieben Tage nach Bekanntmachung der Wahl bzw. Urabstimmung vorläufig  abzuschließen und für fünf Tage beim Wahlausschuss zur Einsicht durch die Studierenden aufzulegen. Eine Einsichtnahme steht jedem zu, um seine  eigenen Daten auf Richtigkeit und Vollständigkeit zu überprüfen. Zur Überprüfung der Richtigkeit oder Vollständigkeit der Daten von anderen im Wählerinnenverzeichnis eingetragenen Personen haben Wahlberechtigte nur dann ein Recht auf Einsicht in das Wählerinnenverzeichnis, wenn sie Tatsachen glaubhaft machen, aus denen sich eine Unrichtigkeit oder Unvollständigkeit des Wählerinnenverzeichnisses ergeben kann.  \label{wahl:waehlerinnenverzeichnis:auflegung}
 
 Das Wählerinnenverzeichnis ist spätestens am 14. Tag nach Bekanntmachung der Wahl bzw. Urabstimmung  unter Berücksichtigung der Entscheidungen nach  \ref{wahl:aenderungwv:aenderungen} vom Wahlausschuss endgültig  abzuschließen. Dabei ist im Wählerinnenverzeichnis
 \begin{enumerate}
@@ -121,7 +121,7 @@ Das Wählerinnenverzeichnis ist spätestens am 14. Tag nach Bekanntmachung der W
 vom Wahlausschuss zu beurkunden.
 
 \jurparagraph{Änderung des Wählerinnenverzeichnisses}
-Die Einsichtsberechtigten gemäß \ref{wahl:wählerinnenverzeichnis:auflegung} können während der Dauer der Auflegung des Wählerinnenverzeichnisses dessen Berichtigung oder Ergänzung beantragen, wenn sie diese für unrichtig oder unvollständig halten. Der Antrag ist schriftlich beim Wahlausschuss zu stellen. Die erforderlichen Beweise sind vom Antragsteller beizubringen. Der Wahlausschuss entscheidet spätestens am 14. Tag nach Bekanntmachung der Wahl bzw. Urabstimmung über die Anträge. Die Entscheidung ist der Antragstellerin und ggf. der Betroffenen mitzuteilen.\label{wahl:aenderungwv:aenderungen}
+Die Einsichtsberechtigten gemäß \ref{wahl:waehlerinnenverzeichnis:auflegung} können während der Dauer der Auflegung des Wählerinnenverzeichnisses dessen Berichtigung oder Ergänzung beantragen, wenn sie diese für unrichtig oder unvollständig halten. Der Antrag ist schriftlich beim Wahlausschuss zu stellen. Die erforderlichen Beweise sind vom Antragsteller beizubringen. Der Wahlausschuss entscheidet spätestens am 14. Tag nach Bekanntmachung der Wahl bzw. Urabstimmung über die Anträge. Die Entscheidung ist der Antragstellerin und ggf. der Betroffenen mitzuteilen.\label{wahl:aenderungwv:aenderungen}
 
 Das Wählerinnenverzeichnis kann vom Wahlausschuss bei Vorliegen offensichtlicher Fehler, Unstimmigkeiten oder Schreibversehen berichtigt oder ergänzt werden.
 
@@ -203,7 +203,7 @@ Wird ein Wahlvorschlag zurückgewiesen oder eine Kandidatin gestrichen, so sind 
 
 Der Wahlausschuss bestimmt unter den Wahlvorschlägen zum Studierendenparlament per Losziehung eine Reihenfolge.\label{wahl:zulassung:reihenfolge}
 
-\jurparagraph{Bekanntmachung der Wahlvorschläge}\label{wahl:bekanntmachungvorschläge}
+\jurparagraph{Bekanntmachung der Wahlvorschläge}\label{wahl:bekanntmachungvorschlaege}
 Der Wahlausschuss macht die Wahlvorschläge spätestens am 14. Tag vor dem ersten Wahltag bekannt.
 Die Bekanntmachung enthält:
 \begin{enumerate}
