--- a/gesamt.tex
+++ b/gesamt.tex
@@ -68,9 +68,9 @@
 
 
 % Für "schöne" Brüche, z.B. bei 2/3-Mehrheit
-\usepackage{xfrac}
-\newcommand{\eindrittel}{\sfrac{1}{3}}
-\newcommand{\zweidrittel}{\sfrac{2}{3}}
+\usepackage{nicefrac}
+\newcommand{\eindrittel}{\nicefrac{1}{3}}
+\newcommand{\zweidrittel}{\nicefrac{2}{3}}
 
 % Aus irgendeinem Grund werden chapters nicht als Absatz in einem Paragraphen
 % fehlinterpretiert sections aber schon und dementsprechend wird vor ihnen eine
