Präambel laesst sich jetzt wenn nötig ersetzen

--- a/einzeln.grundgeruest.tex
+++ b/einzeln.grundgeruest.tex
@@ -31,7 +31,7 @@
 
 \@jurchanges
 
-Im Folgenden wird aus Gründen der besseren Lesbarkeit ausschließlich die weibliche Form verwendet. Dabei ist jede andere Form impliziert. Die Geschlechtsdefinition obliegt jeder Person selbst.
+\@jurpreamble
 
 \begin{multicols}{2}
 \tableofcontents
